# safer-bytes

./: Cargo.toml  README.md
.github/workflows/: CI.yml  coverage.yml
benches/: benchmark.rs
src/: error.rs  lib.rs  safe_buf.rs
