[package]
name = "safe-bytes"
version = "0.1.0"
edition = "2018"
description = "safe, non-panicking wrappers around the 'bytes' crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
paste = "1.0.5"
thiserror = "1.0.26"