[package]
name = "safer-bytes"
version = "0.2.0"
edition = "2018"
description = "safe, non-panicking wrappers around the 'bytes' crate"
license = "MIT"
repository = "https://github.com/danieleades/safer-bytes"
keywords = ["buffers", "zero-copy", "io"]
categories = ["network-programming", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
paste = "1.0.5"
thiserror = "1.0.26"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false
